# jpagear

./: CMakeLists.txt  README.md
games/: CMakeLists.txt
games/alpha/: CMakeLists.txt
games/alpha/ai/empty/: main.cpp
runner/: CMakeLists.txt
runner/config/: config.json
runner/games/: CMakeLists.txt
runner/games/alpha/: CMakeLists.txt  config.json
runner/games/alpha/ai/: CMakeLists.txt
runner/games/alpha/ai/empty/: CMakeLists.txt  main.cpp
runner/jsoncpp/: CMakeLists.txt
runner/src/: main.cpp
src/: main.cpp
