# Compatibility
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

# Project name
PROJECT (runner)

# Project version
SET (${PROJECT_NAME}_MAJOR_VERSION 0)
SET (${PROJECT_NAME}_MINOR_VERSION 1)
SET (${PROJECT_NAME}_PATCH_LEVEL 0)

#SET (SPAWNER_PATH "${CMAKE_BINARY_DIR}/sp")
#SET (BUILD_DIR "${CMAKE_BINARY_DIR}")
SET (RUNNER_ROOT_DIR "${PROJECT_SOURCE_DIR}")
#SET (PROTOTYPE_TESTER "${ROOT_DIR}/bin/sp.exe")


ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/games" games)
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/jsoncpp" jsoncpp)

#INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/inc")
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../libspawner")
INCLUDE_DIRECTORIES (${JSONCPP_INCLUDE_DIRECTORY})

#OPTION(MYPROJECT_DEBUG "Build the project using debugging code" ON)

SET (CMAKE_BUILD_TYPE Debug)

# fix relative path
FILE (GLOB SOURCES ./src/*.cpp)
FILE (GLOB HEADERS ./inc/*.h)

SET (PROJECT_EXECUTABLE ${PROJECT_NAME})
SET(CMAKE_EXE_LINKER_FLAGS "-static")


ADD_EXECUTABLE (${PROJECT_EXECUTABLE} ${SOURCES} ${HEADERS})


TARGET_LINK_LIBRARIES(${PROJECT_EXECUTABLE} libspawner)
TARGET_LINK_LIBRARIES(${PROJECT_EXECUTABLE} jsoncpp)
TARGET_LINK_LIBRARIES(${PROJECT_EXECUTABLE} ntdll)