# Compatibility
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

# Project name
PROJECT (empty)

# Project version
SET (${PROJECT_NAME}_MAJOR_VERSION 0)
SET (${PROJECT_NAME}_MINOR_VERSION 1)
SET (${PROJECT_NAME}_PATCH_LEVEL 0)

SET (CMAKE_BUILD_TYPE Debug)

# fix relative path
#FILE (GLOB SOURCES ./src/*.cpp)
#FILE (GLOB HEADERS ./inc/*.h)

SET (PROJECT_EXECUTABLE ${PROJECT_NAME})
SET(CMAKE_EXE_LINKER_FLAGS "-static")


ADD_EXECUTABLE (${PROJECT_EXECUTABLE} main.cpp)